--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,19 @@
 /* This CSS file is is link to the index html file for the Horiseon webpage. 
 It provide all the styling used on that webpage */
+
+/* sets all elements padding and margins to zero */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* This code sets the page background color */
+/* sets the page background color */
 body {
     background-color: #d9dcd6;
 }
 
-
+/* this section styles the header of the html */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,16 +21,18 @@ body {
     color: #ffffff;
 }
 
+/* sets the text logo appear vertical and its font size */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/* sets the color of the text logo */
 .header h1 .seo {
     color: #d9dcd6;
 }
 
-/* Navigation or menu css */
+/* sets the navigation menu properties like font, font size, alignment */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -41,18 +45,19 @@ body {
     list-style-type: none;
 }
 
+/* sets the menu items to the left and appear inline vertically */
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* This changes the color of all links to white */
+/* sets the color of all links to white */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* css code for the paragraphs in the webpage*/
+/* sets font size of all the paragraphs */
 p {
     font-size: 16px;
 }
@@ -67,11 +72,13 @@ p {
     background-position: center;
 }
 
+/* sets the image to the left inline with the text */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* sets the image to the right inline with the paragraph text */
 .float-right {
     float: right;
     margin-left: 25px;
@@ -96,20 +103,22 @@ p {
     background-color: #2589bd;
 }
 
+/* sets the headings in the side bar and their color to white  */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ffffff; 
 }
 
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
-    text-align: center;
+    text-align: center; /* sets the text in the slide bar to the center */ 
 }
 
+/* sets the images in the side bar to display underneath the preceding element horizontally  */
 .benefit-lead img,
 .benefit-brand img,
 .benefit-cost img {
@@ -130,12 +139,14 @@ p {
     color: #ffffff;
 }
 
+/* sets the images in the main section a hieght of 200px */
 .search-engine-optimization img, 
 .online-reputation-management img, 
 .social-media-marketing img {
     max-height: 200px;
 }
 
+/* sets */
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
@@ -151,6 +162,7 @@ p {
     text-align: center;
 }
 
+/* sets the footer heading font size */
 .footer h2 {
     font-size: 20px;
 }
