--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,19 +39,20 @@ body {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    }
+}
 
+/* sets the menu into a list */
 .header nav ul {
     list-style-type: none;
 }
 
-/* sets the menu items to the left and appear inline vertically */
+/* sets the menu list items to the left and appear inline vertically */
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* sets the color of all links to white */
+/* sets the color of all links to white and removes underlining */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -108,14 +109,15 @@ p {
 .benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
-    color: #ffffff; 
+    color: #ffffff;
 }
 
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
-    text-align: center; /* sets the text in the slide bar to the center */ 
+    text-align: center;
+    /* sets the text in the slide bar to the center */
 }
 
 /* sets the images in the side bar to display underneath the preceding element horizontally  */
@@ -140,13 +142,13 @@ p {
 }
 
 /* sets the images in the main section a hieght of 200px */
-.search-engine-optimization img, 
-.online-reputation-management img, 
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
-/* sets */
+/* controls the headings in the main section */
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
